syntax = "proto3";

package account;

option go_package = "proto;account";

service Account {
	rpc Create(CreateReq) returns (CreateRes) {}
}

message CreateReq {
	string Email = 1;
	string FullName = 2;
	string Role = 3;
}

message CreateRes {
	string ID = 1;
	string Email = 2;
	string FullName = 3;
	string Role = 4;
	string CreatedAt = 5;
	string UpdatedAt = 6;
	string DeletedAt = 7;
}